--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@astrojs/mdx": "^4.0.5",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
-    "astro": "^5.1.6"
+    "@astrojs/tailwind": "^5.1.4",
+    "astro": "^5.1.6",
+    "tailwindcss": "^3.4.17"
   }
 }
